--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.vanvov.hms</groupId>
-    <artifactId>hms</artifactId>
+    <groupId>com.bill.ema</groupId>
+    <artifactId>ema</artifactId>
     <packaging>pom</packaging>
     <version>1.0.1</version>
 
