--- a/emaServer/.settings/org.eclipse.core.resources.prefs
+++ b/emaServer/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,8 @@
 eclipse.preferences.version=1
 encoding//src/main/java=UTF-8
+encoding//src/main/resources/application.properties=UTF-8
+encoding//src/main/resources/templates/head.html=UTF-8
+encoding//src/main/resources/templates/login.html=UTF-8
+encoding//src/main/resources/templates/register.html=UTF-8
 encoding//src/test/java=UTF-8
 encoding/<project>=UTF-8
