--- a/emaServer/.settings/org.eclipse.core.resources.prefs
+++ b/emaServer/.settings/org.eclipse.core.resources.prefs
@@ -5,5 +5,6 @@ encoding//src/main/resources/templates/head.html=UTF-8
 encoding//src/main/resources/templates/index.html=UTF-8
 encoding//src/main/resources/templates/login.html=UTF-8
 encoding//src/main/resources/templates/register.html=UTF-8
+encoding//src/main/resources/templates/user.html=UTF-8
 encoding//src/test/java=UTF-8
 encoding/<project>=UTF-8
