--- a/emaServer/.settings/org.eclipse.core.resources.prefs
+++ b/emaServer/.settings/org.eclipse.core.resources.prefs
@@ -2,6 +2,7 @@ eclipse.preferences.version=1
 encoding//src/main/java=UTF-8
 encoding//src/main/resources/application.properties=UTF-8
 encoding//src/main/resources/templates/head.html=UTF-8
+encoding//src/main/resources/templates/hello.html=UTF-8
 encoding//src/main/resources/templates/index.html=UTF-8
 encoding//src/main/resources/templates/login.html=UTF-8
 encoding//src/main/resources/templates/register.html=UTF-8
